--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path
-        android:fillColor="#3DDC84"
-        android:pathData="M0,0h108v108h-108z" />
+    <path android:pathData="M0,0h108v108h-108z">
+    <aapt:attr name="android:fillColor">
+        <gradient
+            android:endX="85.84757"
+            android:endY="92.4963"
+            android:startX="42.9492"
+            android:startY="49.59793"
+            android:type="linear">
+            <item
+                android:color="#3CC1FF"
+                android:offset="0.0" />
+            <item
+                android:color="#317CFF"
+                android:offset="1.0" />
+        </gradient>
+    </aapt:attr>
+    </path>
     <path
         android:fillColor="#00000000"
         android:pathData="M9,0L9,108"
