--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
 
 
     <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,13 +36,13 @@
             app:layout_constraintVertical_bias="0.02" />
 
         <LinearLayout
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:gravity="top|center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:foregroundGravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:gravity="top|center"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -62,30 +63,30 @@
                 android:foregroundGravity="center">
 
                 <View
-                    android:layout_gravity="center"
-                    android:elevation="1dp"
                     android:layout_width="354dp"
                     android:layout_height="26dp"
+                    android:layout_gravity="center"
+                    android:elevation="1dp"
                     android:foreground="@drawable/round_shape"
-                    android:foregroundTint="@color/color1gray"/>
+                    android:foregroundTint="@color/color1gray" />
 
                 <View
                     android:id="@+id/p1hpBar"
-                    android:layout_gravity="center"
                     android:layout_width="355dp"
                     android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/round_shape"
+                    android:backgroundTint="@color/color2green"
                     android:elevation="2dp"
-                    android:foreground="@drawable/round_shape"
-                    android:foregroundTint="@color/color2green"
                     android:scaleX="0.9825"
-                    android:scaleY="0.875"/>
+                    android:scaleY="0.875" />
 
                 <TextView
                     android:id="@+id/p1hpText"
                     android:layout_width="350dp"
                     android:layout_height="23dp"
-                    android:elevation="3dp"
                     android:layout_gravity="center"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:text="@string/playerHp"
                     android:textSize="18sp"
@@ -95,7 +96,7 @@
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="10dp"/>
+                android:layout_height="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -116,30 +117,30 @@
                 android:foregroundGravity="center">
 
                 <View
-                    android:layout_gravity="center"
-                    android:elevation="1dp"
                     android:layout_width="354dp"
                     android:layout_height="26dp"
+                    android:layout_gravity="center"
+                    android:elevation="1dp"
                     android:foreground="@drawable/round_shape"
-                    android:foregroundTint="@color/color1gray"/>
+                    android:foregroundTint="@color/color1gray" />
 
                 <View
                     android:id="@+id/e1hpBar"
-                    android:layout_gravity="center"
                     android:layout_width="355dp"
                     android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/round_shape"
+                    android:backgroundTint="@color/color2green"
                     android:elevation="2dp"
-                    android:foreground="@drawable/round_shape"
-                    android:foregroundTint="@color/color2green"
                     android:scaleX="0.9825"
-                    android:scaleY="0.875"/>
+                    android:scaleY="0.875" />
 
                 <TextView
                     android:id="@+id/e1hpText"
                     android:layout_width="350dp"
                     android:layout_height="23dp"
-                    android:elevation="3dp"
                     android:layout_gravity="center"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:text="@string/enemy1Hp"
                     android:textSize="18sp"
@@ -150,7 +151,7 @@
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="10dp"/>
+                android:layout_height="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -182,31 +183,31 @@
 
                 <View
                     android:id="@+id/e2hpBar"
-                    android:layout_gravity="center"
                     android:layout_width="355dp"
                     android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/round_shape"
+                    android:backgroundTint="@color/color2green"
                     android:elevation="2dp"
-                    android:foreground="@drawable/round_shape"
-                    android:foregroundTint="@color/color2green"
                     android:scaleX="0.9825"
-                    android:scaleY="0.875"/>
+                    android:scaleY="0.875" />
 
                 <TextView
                     android:id="@+id/e2hpText"
                     android:layout_width="350dp"
                     android:layout_height="23dp"
-                    android:elevation="3dp"
                     android:layout_gravity="center"
+                    android:elevation="3dp"
                     android:gravity="center"
                     android:text="@string/enemy2Hp"
                     android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             </FrameLayout>
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="56dp"/>
+                android:layout_height="56dp" />
 
             <FrameLayout
                 android:layout_width="375dp"
@@ -230,26 +231,30 @@
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="66dp"/>
+                android:layout_height="66dp" />
 
             <androidx.gridlayout.widget.GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="185dp"
+                android:layout_height="180dp"
                 android:background="@drawable/rounded_rectangle"
                 android:backgroundTint="#99595959"
-                android:padding="7dp">
+                android:padding="3dp">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/buttonAt"
                     android:layout_width="195dp"
                     android:layout_height="85dp"
                     android:backgroundTint="#F60000"
                     android:padding="15dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
+                    android:shadowColor="#CD000000"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
                     android:text="Attack"
                     android:textAllCaps="false"
-                    android:textColor="#FFC000"
+                    android:textColor="#00D5C1"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:cornerRadius="25dp"
@@ -257,16 +262,20 @@
                     app:layout_row="0" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/buttonDg"
                     android:layout_width="195dp"
                     android:layout_height="85dp"
-                    android:backgroundTint="#00E604"
+                    android:backgroundTint="#00DF04"
                     android:padding="15dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
+                    android:shadowColor="#CD000000"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
                     android:text="Dodge"
                     android:textAllCaps="false"
-                    android:textColor="#B300FF"
+                    android:textColor="#8800FF"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:cornerRadius="25dp"
@@ -274,16 +283,20 @@
                     app:layout_row="1" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/buttonCt"
                     android:layout_width="195dp"
                     android:layout_height="85dp"
                     android:backgroundTint="#FFC003"
                     android:padding="15dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
+                    android:shadowColor="#CD000000"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
                     android:text="Counter"
                     android:textAllCaps="false"
-                    android:textColor="#007BFF"
+                    android:textColor="#0040FF"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:cornerRadius="25dp"
@@ -291,40 +304,94 @@
                     app:layout_row="1" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/buttonDf"
                     android:layout_width="195dp"
                     android:layout_height="85dp"
                     android:backgroundTint="#008EFF"
                     android:padding="15dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
+                    android:shadowColor="#CD000000"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3"
                     android:text="Defend"
                     android:textAllCaps="false"
-                    android:textColor="#FF0800"
+                    android:textColor="#FF4800"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:cornerRadius="25dp"
                     app:layout_column="1"
                     app:layout_row="0" />
+
             </androidx.gridlayout.widget.GridLayout>
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"/>
+                android:layout_height="30dp" />
 
             <Button
                 android:id="@+id/restartButton"
                 android:layout_width="115dp"
                 android:layout_height="55dp"
-                android:backgroundTint="#00E60A"
+                android:backgroundTint="#00D80A"
+                android:shadowColor="#CD000000"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="2"
                 android:text="Restart"
-                android:textColor="#FF0B07"
+                android:textColor="#B507FF"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:cornerRadius="20dp" />
 
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/atkMnu"
+        android:layout_width="145dp"
+        android:layout_height="100dp"
+        android:background="@drawable/buttons_background"
+        android:backgroundTint="#633E3E3E"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.65"
+        tools:visibility="visible">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FF3A33"
+            android:shadowColor="#CD000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="Enemy 1"
+            android:textColor="#00F4DE"
+            app:cornerRadius="10dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FF3A33"
+            android:shadowColor="#CD000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="Enemy 2"
+            android:textColor="#00F4DE"
+            app:cornerRadius="10dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
